--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
+
 }
 
 application {
